refactor: trying getId instead of threadId
For some weird reason, threadId is not found when building the Docker image on our server.